[Chore] 패키지 설치 및 업데이트
- gsap 업데이트
- motion, framer-motion 설치

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
-    "gsap": "^3.12.7",
+    "framer-motion": "^12.19.1",
+    "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
+    "motion": "^12.19.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
