--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.19.1",
     "motion": "^12.19.1",
     "next": "15.2.4",
